k8s/ingress.srv.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-srv
  annotations:
    kubernetes.io/ingress.class: 'nginx'
spec:
  rules:
    - host: psychoschool.ru
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: psycho-front-srv
                port:
                  number: 5000
    - host: api.psychoschool.ru
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: psycho-api-srv
                port:
                  number: 8080
